# edgeDetect

./: .gitignore  CMakeLists.txt  README.md
align/: AlignMainWindow.cpp  AlignMainWindow.h  AlignViewWidget.cpp  AlignViewWidget.h  CMakeLists.txt  ProjectConfig.cpp  ProjectConfig.h  ProjectDialog.cpp  ProjectDialog.h  main.cpp
cannyToOutline/: CMakeLists.txt  CannyMainWindow.cpp  CannyMainWindow.h  CannyViewWidget.cpp  CannyViewWidget.h  ProjectConfig.cpp  ProjectConfig.h  ProjectDialog.cpp  ProjectDialog.h  TECHNICAL.md  main.cpp
common/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  ComponentExtent.cpp  ComponentExtent.h  CountSnapSpinBox.h  CursorUtils.cpp  CursorUtils.h  EditColors.h  OriginalLoader.cpp  OriginalLoader.h  ProjectTimeDialog.cpp  ProjectTimeDialog.h  TimeTracker.cpp  TimeTracker.h  ViewPreset.h
docs/: PIN_FIT_ALGORITHM.md  PIN_FIT_ALGORITHM_pl.md  TECHNICAL.md  USER_GUIDE.md
manualCorrect/: CMakeLists.txt  McMainWindow.cpp  McMainWindow.h  McViewWidget.cpp  McViewWidget.h  ProjectConfig.cpp  ProjectConfig.h  ProjectDialog.cpp  ProjectDialog.h  main.cpp
outlineChooser/: CMakeLists.txt  OcMainWindow.cpp  OcMainWindow.h  OcViewWidget.cpp  OcViewWidget.h  ProjectConfig.cpp  ProjectConfig.h  ProjectDialog.cpp  ProjectDialog.h  main.cpp
toMultiCanny/: CMakeLists.txt  Canny.cpp  Canny.h  main.cpp
